--- a/Slen.WebControl/Shared/MainLayout.razor
+++ b/Slen.WebControl/Shared/MainLayout.razor
@@ -6,7 +6,9 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+        <div class=" ml-md-right">
+            <CultureSelector />
+        </div>
     </div>
 
     <div class="content px-4">
