--- a/Slen.WebControl/Pages/Index.razor
+++ b/Slen.WebControl/Pages/Index.razor
@@ -2,3 +2,14 @@
 @inject Microsoft.Extensions.Localization.IStringLocalizer<Index> Loc
 
 <h1>@Loc["Hello, world!"]</h1>
+
+<div class="card">
+    <div class="card-header">
+        Featured
+    </div>
+    <div class="card-body">
+        <h5 class="card-title">Специальный заголовок</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Переход куда-нибудь</a>
+    </div>
+</div>
