--- a/Slen.WebControl/Pages/Index.razor
+++ b/Slen.WebControl/Pages/Index.razor
@@ -4,21 +4,19 @@
 <h1>@Loc["Hello, world!"]</h1>
 
 <div class="card-deck">
-    <AgentCard @bind-health="Agent1"/>
+    <AgentCard @bind-health="Agent1" />
     <button class="btn btn-primary" @onclick="ChangeTheYear">
-        Change Year to 1986
+        Hit
     </button>
 </div>
 
 @code{
     [Parameter]
-    public int Agent1 { get; set; } = 10;
-
-    static Random Random = new Random();
+    public int Agent1 { get; set; } = 20;
 
     private void ChangeTheYear()
     {
-        Agent1 = Random.Next(0, 20);
+        Agent1 = Agent1 > 0 ? Agent1 - 1 : 20;
         Console.WriteLine(Agent1);
     }
 }
