--- a/Slen.WebControl/Shared/AtlasImg.razor
+++ b/Slen.WebControl/Shared/AtlasImg.razor
@@ -1,4 +1,5 @@
-﻿<div style="        width: @tw;
+﻿<div style="
+        width: @tw;
         height: @th;
         background-image: @url;
         background-position: @backgroundPosition;" />
