feature database context

--- a/Bost.WebControl/Pages/Index.razor
+++ b/Bost.WebControl/Pages/Index.razor
@@ -10,7 +10,9 @@
             @Loc["Hit!"]
         </button>*@
 
-    <Inventory></Inventory>
+    <ServerStatus></ServerStatus>
+
+    @*<Inventory></Inventory>*@
 </div>
 
 @code{
